src/test/deca/codegen/valid/SO/ConvFloatInt.deca
// Description:
//    ConvFloat d'un entier (ConvFloat)
//
// Resultats:
//    
//
// Historique:
//    cree le 12/01/2022

{
        float f;
        float g;
        int i = 12;
        
        f = 4;
        g = i;
        print("12.0=");
        println(g);
}