src/test/deca/codegen/invalid/nombreTropGrandInt.deca
// Description:
//    Calcul un nombre trop grand
//
// Resultats: "Debordement flottant nombre trop grand" 
// Resultats avec decac - n 10^47 = 1.00000e+36
//
// Historique:
//    cree le 14/01/2022

{
    int x = 9999999999999999999999999999999999999999;
}